5.9.0 20260411
NT: End of active development.
    Support and maintenance remain active.
BF: Review: Optimization and corrections
CR: Review: Initialize refactored in Settings
??: Facelift: Status / Index / Templates
??: Review: Optimization and corrections
??: Service: devwex start [directory] (read all ini files from directory)
??: Automation (build, test, release) via GitHub actions
??: Windows: Update of service-32.exe / service-64.exe (prunsrv.exe 1.4.x)
    - https://commons.apache.org/daemon/procrun.html
    - https://downloads.apache.org/commons/daemon/binaries/
??: Documentation: Update for Unix and Linux
??: Documentation: Architecture image
??: CGI: Watchdog for blocking processes/stdin/stdout
    - WorkerGatewayTest.testAcceptance_16()
    - test/resources/documents_vh_A/cgi_read_blocking.jsx
    - test/resources/documents_vh_A/cgi_read_slow.jsx
??: Configuration: Add # as optional/alternavtive comment symbols

5.8.0 20251231
NT: Competition: 25 years Devwex -- raffle one of 10x 3.5" disks.
    Send an e-mail to devwex@seanox.com by 04/11/2026.
    The outcome of the raffle is final and not subject to legal appeal. 
BF: Review: Optimization and corrections
BF: HTTP(S): Update / standardization of HTTP status messages
BF: HTTP(S): Omission of status 424, which was simply incorrect
    Status 400 and 500 are now used correctly.
CR: Test: Integration of JaCoCo (Java Code Coverage)
CR: Service: Optimization of logging output

5.7.0 20241214
BF: Unix/Linux: Correction of the missing second start parameter in the bash script
BF: Windows: Correction of the missing second start parameter in the batch script
BF: HTTP(S): Correction of the Accept header when using CGI
    The server has incorrectly determined the content type for the CGI.
    Now the CGI must take care of the Accept header, as it should.
BF: Service: Optimization of automatic resource clean-up
BF: Service: Optimization for UTF-8